# SUIT_20250925

./: Makefile  README.md  pyproject.toml  sodoku_solver.html
docs/: sudoku_solver_spec_en.md  sudoku_solver_spec_hu.md
static/: app.js  styles.css
sudoku/: __init__.py  cli.py  core.py  utils.py  web.py
templates/: index.html
tests/: test_api.py  test_core.py  test_parser.py
