[project]
name = "sudoku-solver"
version = "0.1.0"
description = "Deterministic Sudoku solver with CLI and web demo"
authors = [{name = "Sudoku Solver Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Flask>=2.3,<3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<8.0",
    "pyflakes>=3.1,<4.0"
]

[project.urls]
Homepage = "https://example.com"

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
